# Memory

./: CMakeLists.txt  README.md
.VSCodeCounter/2022-03-16_10-34-45/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/: centralCache.h  common.h  defineition.h  freeList.h  pageCache.h  threadCache.h
src/: CMakeLists.txt  centralCache.cpp  common.cpp  pageCache.cpp  threadCache.cpp
test/: CMakeLists.txt  test_malloc.cpp
